# CigOps2.0

./: .gitignore  README.md  pyproject.toml
backend/: .env.example  Dockerfile  README.md  __init__.py  app.py  env.example  main.py  models.py  populate_chromadb.py  rag_trial.py  requirements.txt  run.py  setup.py
backend/.venv311/: pyvenv.cfg  rag_trial.py
backend/data/chat_history/: user_2rgi1hz.json  user_38b6dg0.json  user_4oz5o2b.json  user_729z8sw.json  user_7zql6ln.json  user_82448c9.json  user_8trx8sm.json  user_blua1hv.json  user_bmbmupi.json  user_c21dgnm.json  user_cmtaehb.json  user_dby646o.json  user_dkpg2f2.json  user_drgw2cl.json  user_fh8bqyn.json  user_fqddga0.json  user_fs80ofw.json  user_fysk436.json  user_gi82tq3.json  user_h2s8941.json  user_i08y6dk.json  user_irhiqpf.json  user_ivxxs5f.json  user_j4n7pwr.json  user_k3a7x8c.json  user_lk4g7d8.json  (+12 more)
backend/models/: __init__.py  calm.py  craving.py  game.py  plan.py  py  query.py  resources.py  user.py  voice_chat.py
backend/routes/: analytics.py  calm.py  chat.py  craving.py  dashboard.py  game.py  knowledge.py  plan.py  query.py  resources.py  user.py  voice_chat.py
backend/services/: analytics.py  chat.py  craving.py  dashboard.py  document_analyzer_service.py  elevenlabs.py  game.py  groq_service.py  knowledge.py  plan.py  rag.py  resources.py  user.py  voice.py  watsonx.py
data/knowledge_base/: knowledge_base.json
frontend/: .env.example  .env.production  DEPLOYMENT.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js  index.css
(+92 files in other folders)
